# kurs_drf

./: README.md
kurs_drf/: .env.sample  pyproject.toml
kurs_drf/config/: celery.py  settings.py
