[tool.poetry]
name = "kurs-drf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2 = "^2.9.10"
drf-yasg = "^1.21.8"
djangorestframework = "^3.15.2"
redis = "^5.2.1"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
django-cors-headers = "^4.6.0"
coverage = "^7.6.9"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
black = "^24.10.0"
isort = "^5.13.2"
djangorestframework-simplejwt = "^5.3.1"
pytest = "^8.3.4"
pytz = "^2024.2"
flake8 = "^7.1.1"
setuptools = "^75.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
